--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag learningstaircase/geoip:latest
+      uses: docker/build-push-action@v3
       with:
         push: true
+        tags: learningstaircase/geoip:latest
