--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -45,5 +45,5 @@ jobs:
         ECR_REPOSITORY: geoip
         IMAGE_TAG: latest
       run: |
-        docker image tag learningstaircase/geoip:latest $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker image tag learningstaircase/geoip:latest $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
