--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,9 @@ jobs:
         push: true
         tags: learningstaircase/geoip:latest
         secrets: |
-          GEOIP_URL=${{ secrets.GEOIP_URL }}
+          id=geoip_url,env=GEOIP_URL
+      env:
+        GEOIP_URL: ${{ secrets.GEOIP_URL }}
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4.1.0
